fix button gap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,7 +94,11 @@ table {
 }
 
 .glyphicon {
-  margin-right: 6px;
+  margin-right: 5px;
+}
+
+.btn {
+  margin-right: 5px;
 }
 
 .grey-bgcolor {
